<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:padding="4dp" >

<!-- button -->               
	<LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        android:layout_margin="4dp" > 
 
    	<Button
        	android:id="@+id/Button_start"
        	android:text="@string/button_start"
         	android:onClick="onClickStart"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1" />

    	<TextView
        	android:id="@+id/TextView_status"
        	android:text="@string/status_not"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="2"
        	android:layout_marginLeft="10dp" />
        	
	</LinearLayout>

<!-- Ranking -->
	<LinearLayout 
		android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dp" >
     
     	<TextView
        	android:text="@string/label_ranking"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" /> 

		<LinearLayout 
			android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="10dp" >
    	        			    		
    		<TextView
        		android:id="@+id/TextView_rank_0"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />
 
     		<TextView
        		android:id="@+id/TextView_rank_1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />

     		<TextView
        		android:id="@+id/TextView_rank_2"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />

     		<TextView
        		android:id="@+id/TextView_rank_3"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />

     		<TextView
        		android:id="@+id/TextView_rank_4"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />

		</LinearLayout> 
	
	</LinearLayout> 
	 
 <!-- MeterView -->     	                                       	
    <jp.ohwada.andorid.pocketduinoalcoholmeter.MeterView
        android:id="@+id/MeterView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

<!-- button -->               
	<LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        android:layout_margin="4dp" > 

    	<Button
        	android:id="@+id/Button_rank"
        	android:text="@string/button_rank"
        	android:onClick="onClickRank"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1" />
     		        
    	<Button
        	android:id="@+id/Button_clear"
        	android:text="@string/button_clear"
        	android:onClick="onClickClear"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1" />

	</LinearLayout>
	           	
</LinearLayout>